# Pancho

./: LICENSE.md  README.md
server/: .env  .gitignore  CMakeLists.txt  Dockerfile  Makefile  docker-compose.yaml  mosquitto.conf  mqtt.conf
server/app/include/pancho/: shared.hpp
server/app/src/: main.cpp  main_testing.cpp
server/app/src/CommandHandler/: CommandHandler.cpp  NightStandCommandHandler.cpp  SpeakerCommandHandler.cpp
server/app/src/Controller/: AlarmController.cpp  TrainController.cpp  WeatherController.cpp
server/app/src/Entity/: Alarm.cpp  Train.cpp
server/app/src/Kernel/: Client.cpp  Server.cpp
server/app/src/Utils/: commandSplitter.cpp  responses.cpp
server/app/src/Wrapper/: XMLParser.cpp
server/gtests/: serverUnittest.cpp
server/make-files/: Makefile
server/src/: main.cpp
server/src/CommandHandler/: CommandHandler.cpp  CommandHandler.hpp  CommandHandlerResponse.hpp
server/src/CommandHandler/AlarmCommandHandler/: AlarmCommandHandler.cpp  AlarmCommandHandler.hpp
server/src/CommandHandler/NightStandCommandHandler/: NightStandCommandHandler.cpp  NightStandCommandHandler.hpp
server/src/CommandHandler/SpeakerController/: SpeakerCommandHandler.cpp  SpeakerCommandHandler.hpp
server/src/Controller/AlarmController/: AlarmController.cpp  (+1 more)
server/src/Entity/: Configuration.php  IotElement.php
server/src/Repository/: ConfigurationRepository.php  IotElementRepository.php
server/src/Utils/: CommandSplitter.cpp  commandSplitter.cpp  commandSplitter.hpp  responses.cpp  responses.hpp  utils.hpp
server/src/shared/: shared.hpp
(+61 files in other folders)
